# cfpb-website-scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  file_links.csv  missing_page_links.csv  page_links.csv  pyproject.toml  static_links.csv
cfpb_website_scraper/: __init__.py  cli.py  links.py  pages.py  schema.py
cfpb_website_scraper/aws_scraper/: __main__.py  scrape.py
data/: homepage.index.html
data/links/2025_02_27__17_32_25/: all_links.csv  redirects.csv
data/links/2025_02_28__10_12_19/: redirects.csv
data/links/2025_02_28__10_17_11/: redirects.csv
data/links/2025_02_28__21_54_50/: missing_links_files.csv  missing_links_pages.csv  redirects.csv
results/pages/: _redirects
results/pages/1071-rule/: index.html
results/pages/13000-lessons-learned/: index.html
results/pages/Complaint/: index.html
results/pages/KnowBeforeYouOwe/: index.html
results/pages/about-us/: index.html
results/pages/accessibility/: index.html
results/pages/activity-log/: index.html
results/pages/administrative-adjudication-proceedings/: index.html
results/pages/adult-financial-education/: index.html
results/pages/advisory-groups/: index.html
results/pages/ai/: index.html
results/pages/an-essential-guide-to-building-an-emergency-fund/: index.html
results/pages/arbitration-rule/: index.html
results/pages/ask-cfpb/: index.html
results/pages/auto-loans/: index.html
results/pages/budget/: index.html
results/pages/careers/: index.html
scripts/: README.md  find_links.py  find_missing_links.py  save_redirects.py
(+15793 files in other folders)
