[tool.poetry]
name = "cfpb-website-scraper"
version = "0.1.0"
description = "Scraping and archiving the CFPB website"
authors = ["Nick Hand <nicholas.adam.hand@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = ">=4.10"
pandas = "^1.3.3"
numpy = "^1.26.4"
pdfplumber = "^0.5.28"
intervaltree = "^3.1.0"
desert = "^2020.11.18"
loguru = "^0.5.3"
beautifulsoup4 = "^4.10.0"
tryagain = "^1.0"
importlib-metadata = "<4.3"
scrapelib = "^2.0.6"
bs4 = "^0.0.1"
pydantic = "^1.9.0"
click = "^8.0.4"
urllib3 = "<2"
requests = "^2.31.0"
python-dotenv = "^0.19.2"
aiobotocore = "^2.1.0"
s3fs = "^2022.1.0"
boto3 = "<2"
simplejson = "^3.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^22.1.0"
ipython = "^8.1.1"
jupyterlab = "*"

[tool.poetry.group.dev.dependencies]
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cfpb-website-scraper = "cfpb_website_scraper.cli:cli"
